# taiwan-stock-analyzer

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  _check_data.py  _preflight.py  _verify_token.py  app.py  environment.yml  pyproject.toml  reproducibility_manifest.md  requirements.txt  run_phase1.py
.streamlit/: config.toml
backup_before_merge/: research_report_v1.md
docs/: DAILY_PROGRESS.md  NEXT_ACTION.md  PROJECT_STATUS.md  REVIEWER_TRACKER.md  architecture.md  data_snapshot_protocol.md  known_issues.md  phase1_checklist.md  phase1_execution_plan.md  phase1_priority.md  portfolio_introduction.md  refactor_history.md  research_proposal.md  research_report_v1.md  roadmap.md  statistical_engine_policy.md  technical_whitepaper.md
modules/: __init__.py  cross_sectional_ic.py  data_quality.py  data_source.py  daytrade_scanner.py  decision_score.py  entry_exit_model.py  event_window.py  explainability.py  factor_portfolio.py  fama_macbeth.py  feature_engineering.py  finmind_client.py  finmind_data.py  fundamental_factors.py  institutional_flow.py  market_cap_stratify.py  market_dashboard.py  multi_factor.py  portfolio.py  portfolio_risk.py  predictor.py  rating_engine.py  report_generator.py  report_styles.py  research_pipeline.py  risk_analysis.py  stats_utils.py  stock_scanner.py  strategy_screener.py  transaction_cost.py  ui_components.py  universe_builder.py  universe_pit.py  walk_forward.py
pages/: 10_Fundamental_Factors_TW.py  11_數據驗證中心.py  12_多因子回測中心.py  13_投資組合風險引擎.py  14_研究報告產生器.py  1_市場動能分析.py  2_走勢預測分析.py  (+7 more)
(+54 files in other folders)
