[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taiwan-stock-analyzer"
version = "0.1.0"
description = "Institutional-grade Taiwan equity research and decision-support platform"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0,<2.0",
    "pandas>=2.0.0,<3.0",
    "numpy>=1.24.0,<2.0",
    "yfinance>=0.2.40",
    "plotly>=5.20.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "ta>=0.10.0",
    "sqlalchemy>=2.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.28.0",
    "pytz>=2023.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "utils*", "strategies*", "validators*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
